@@ -769,7 +769,7 @@ body {
 
 <p><strong>scene.image</strong> | <code>filename, int : Filename, Scaling type</code> | Filename of an image that will be shown. The scaling type is a value between 0-2, corresponding to  none, fit height, fit screen.</p>
 
-<p><strong>scene.pause</strong> | <code>duration</code> | Pause before next component in &lsquo;ms&rsquo; or &rsquo;s'.</p>
+<p><strong>scene.pause</strong> | <code>duration</code> | Pause before next component in &lsquo;ms&rsquo; or &rsquo;s'. A value of &lsquo;-1&rsquo; may be used to pause indefinitely.</p>
 
 <p><strong>scene.soundfx</strong> | <code>filename</code> | Filename of a sound that will be played</p>
 
