@@ -45,13 +45,16 @@ Scene::Scene(const CutsceneSettings& _settings, short _cutscene_type)
 	, art_scale_type(CUTSCENE_SCALE_NONE)
 	, sid(-1)
 	, caption_box(NULL)
+	, button_prev(new WidgetButton("images/menus/buttons/left.png"))
 	, button_next(new WidgetButton("images/menus/buttons/right.png"))
 	, button_close(new WidgetButton("images/menus/buttons/button_x.png"))
 	, button_advance(NULL)
-	, done(false)
 	, vscroll_offset(0)
 	, vscroll_ticks(0)
+	, sub_index(0)
+	, prev_sub_index(0)
 	, cutscene_type(_cutscene_type)
+	, is_first_scene(false)
 	, is_last_scene(false)
 {
 }
@@ -73,27 +76,28 @@ Scene& Scene::operator=(const Scene& other) {
 	art_scale_type = other.art_scale_type;
 	sid = other.sid;
 	caption_box = NULL;
+	button_prev = new WidgetButton("images/menus/buttons/left.png");
 	button_next = new WidgetButton("images/menus/buttons/right.png");
 	button_close = new WidgetButton("images/menus/buttons/button_x.png");
 	button_advance = NULL;
-	done = other.done;
 	vscroll_offset = other.vscroll_offset;
 	vscroll_ticks = other.vscroll_ticks;
+	sub_index = other.sub_index;
+	prev_sub_index = other.prev_sub_index;
 	cutscene_type = other.cutscene_type;
+	is_first_scene = other.is_first_scene;
 	is_last_scene = other.is_last_scene;
 
 	return *this;
 }
 
 Scene::~Scene() {
-	if (art) delete art;
-	if (art_scaled) delete art_scaled;
+	clearArt();
+	clearSound();
 	delete caption_box;
+	delete button_prev;
 	delete button_next;
 	delete button_close;
-	while(!components.empty()) {
-		components.pop();
-	}
 
 	for (size_t i = 0; i < vscroll_components.size(); ++i) {
 		if (vscroll_components[i].image)
@@ -103,144 +107,246 @@ Scene::~Scene() {
 	}
 }
 
-bool Scene::logic() {
-	if (done) return false;
+void Scene::clearArt() {
+	delete art;
+	art = NULL;
+	delete art_scaled;
+	art_scaled = NULL;
 
-	if (is_last_scene && (cutscene_type == CUTSCENE_VSCROLL || components.empty()))
+	art_size = Point(0, 0);
+}
+
+void Scene::clearSound() {
+	if (sid != 0) {
+		snd->unload(sid);
+	}
+	sid = 0;
+}
+
+void Scene::reset() {
+	frame_counter = 0;
+	pause_frames = 0;
+	caption = "";
+	clearArt();
+	clearSound();
+	delete caption_box;
+	caption_box = NULL;
+	vscroll_offset = 0;
+	vscroll_ticks = 0;
+	for (size_t i = 0; i < vscroll_components.size(); ++i) {
+		if (vscroll_components[i].image)
+			delete vscroll_components[i].image;
+		if (vscroll_components[i].text)
+			delete vscroll_components[i].text;
+	}
+	vscroll_components.clear();
+
+	prev_sub_index = 0;
+	if (sub_index > 0)
+		prev_sub_index = sub_index - 1;
+
+	sub_index = 0;
+
+	refreshWidgets();
+}
+
+int Scene::logic() {
+	button_prev->enabled = !(is_first_scene && sub_index == 0);
+
+	if (is_last_scene && (cutscene_type == CUTSCENE_VSCROLL || sub_index+1 >= subscenes.size()))
 		button_advance = button_close;
 	else
 		button_advance = button_next;
 
-	bool skip = false;
-	bool skip_scroll = false;
-	if (button_advance->checkClick()) {
-		skip = true;
-		skip_scroll = true;
+	int skip = SKIP_NONE;
+	if (button_prev->checkClick()) {
+		skip = SKIP_PREV;
 	}
-	if (!button_advance->pressed) {
+	else if (button_advance->checkClick()) {
+		skip = SKIP_NEXT;
+	}
+	else if (inpt->pressing[Input::MAIN1] && Utils::isWithinRect(button_prev->pos, inpt->mouse)) {
+		inpt->lock[Input::MAIN1] = true;
+	}
+
+	if (!button_prev->pressed && !button_advance->pressed) {
 		if (inpt->pressing[Input::MAIN1] && (!inpt->lock[Input::MAIN1] || cutscene_type == CUTSCENE_VSCROLL)) {
 			inpt->lock[Input::MAIN1] = true;
-			skip = true;
+			skip = SKIP_SUBSCENE;
 		}
-		if (inpt->pressing[Input::ACCEPT] && (!inpt->lock[Input::ACCEPT] || cutscene_type == CUTSCENE_VSCROLL)) {
+		else if (inpt->pressing[Input::ACCEPT] && (!inpt->lock[Input::ACCEPT] || cutscene_type == CUTSCENE_VSCROLL)) {
 			inpt->lock[Input::ACCEPT] = true;
-			skip = true;
+			skip = SKIP_SUBSCENE;
 		}
-		if (inpt->pressing[Input::CANCEL] && !inpt->lock[Input::CANCEL]) {
+		else if (inpt->pressing[Input::RIGHT] && !inpt->lock[Input::RIGHT]) {
+			inpt->lock[Input::RIGHT] = true;
+			skip = SKIP_NEXT;
+		}
+		else if (button_prev->enabled && inpt->pressing[Input::LEFT] && !inpt->lock[Input::LEFT]) {
+			inpt->lock[Input::LEFT] = true;
+			skip = SKIP_PREV;
+		}
+		else if (inpt->pressing[Input::CANCEL] && !inpt->lock[Input::CANCEL]) {
 			inpt->lock[Input::CANCEL] = true;
-			done = true;
+			return DONE;
+		}
+		else if (cutscene_type == CUTSCENE_VSCROLL && inpt->pressing[Input::UP]) {
+			vscroll_ticks -= VSCROLL_SPEED;
+			if (vscroll_ticks < 0)
+				vscroll_ticks = 0;
+		}
+		else if (cutscene_type == CUTSCENE_VSCROLL && inpt->pressing[Input::DOWN]) {
+			vscroll_ticks += VSCROLL_SPEED;
 		}
 	}
 
 	if (cutscene_type == CUTSCENE_STATIC) {
-		/* Pause until specified frame */
-		if (!skip && pause_frames != 0 && frame_counter < pause_frames) {
-			++frame_counter;
-			return true;
+		if (skip == SKIP_PREV) {
+			// Go to the previous subscene (or scene if we're on the first subscene)
+			if (sub_index == 0) {
+				reset();
+				return PREV;
+			}
+			else {
+				reset();
+			}
+		}
+		else if (skip == SKIP_NONE && pause_frames != 0 && (frame_counter < pause_frames || pause_frames == -1)) {
+			// Pause until specified frame
+			// we use -1 to pause indefinitely
+			if (pause_frames > 0)
+				++frame_counter;
+			return NO_CHANGE;
+		}
+		else if (skip == SKIP_SUBSCENE || skip == SKIP_NEXT || (pause_frames != 0 && frame_counter == pause_frames)) {
+			// Go to the next subscene/scene
+			sub_index++;
 		}
 
-		/* parse scene components until next pause */
-		while (!components.empty() && components.front().type != "pause") {
+		std::string image_filename;
+		std::string sfx_filename;
 
-			if (components.front().type == "caption") {
-				caption = components.front().s;
-			}
-			else if (components.front().type == "image") {
-				if (art) {
-					delete art;
-					art = NULL;
+		// parse scene components until next pause
+		if (sub_index < subscenes.size()) {
+			for (size_t i = subscenes[sub_index]; i < components.size(); ++i) {
+				if (components[i].type == "caption") {
+					caption = components[i].s;
 				}
-				if (art_scaled) {
-					delete art_scaled;
-					art_scaled = NULL;
+				else if (components[i].type == "image") {
+					image_filename = components[i].s;
+					art_scale_type = components[i].x;
 				}
-				Image *graphics = render_device->loadImage(components.front().s, RenderDevice::ERROR_NORMAL);
-				if (graphics != NULL) {
-					art = graphics->createSprite();
-					art_size.x = art->getGraphicsWidth();
-					art_size.y = art->getGraphicsHeight();
-					graphics->unref();
+				else if (components[i].type == "soundfx") {
+					sfx_filename = components[i].s;
 				}
+				else if (components[i].type == "pause") {
+					if (sub_index < prev_sub_index) {
+						// if the prev_sub_index > 0, we skip pauses until the sub_index catches up
+						sub_index++;
+					}
+					else {
+						// set the pause counter
+						pause_frames = components[i].x;
+						frame_counter = 0;
+						break;
+					}
 
-				art_scale_type = components.front().x;
+					// reset the prev_sub_index when sub_index has caught up
+					if (sub_index == prev_sub_index) {
+						prev_sub_index = 0;
+					}
+				}
 			}
-			else if (components.front().type == "soundfx") {
-				if (sid != 0)
-					snd->unload(sid);
-
-				sid = snd->load(components.front().s, "Cutscenes");
-				snd->play(sid, snd->DEFAULT_CHANNEL, snd->NO_POS, !snd->LOOP);
-			}
-
-			components.pop();
 		}
 
-		/* check if current scene has reached the end */
-		if (components.empty())
-			return false;
+		// set subscene image
+		if (!image_filename.empty()) {
+			clearArt();
 
-		/* setup frame pausing */
-		frame_counter = 0;
-		pause_frames = components.front().x;
-		components.pop();
+			Image *graphics = render_device->loadImage(image_filename, RenderDevice::ERROR_NORMAL);
+			if (graphics != NULL) {
+				art = graphics->createSprite();
+				art_size.x = art->getGraphicsWidth();
+				art_size.y = art->getGraphicsHeight();
+				graphics->unref();
+			}
+		}
+
+		// set subscene soundfx
+		if (!sfx_filename.empty()) {
+			clearSound();
+
+			sid = snd->load(sfx_filename, "Cutscenes");
+			snd->play(sid, snd->DEFAULT_CHANNEL, snd->NO_POS, !snd->LOOP);
+		}
+
+		// check if current scene has reached the end
+		if (sub_index >= subscenes.size() || subscenes[sub_index] >= components.size())
+			return NEXT;
 
 		refreshWidgets();
 	}
 	else if (cutscene_type == CUTSCENE_VSCROLL) {
-		// populate the list of text/images from config file data
-		int next_y = 0;
-		while (!components.empty()) {
-			if (components.front().type == "text") {
-				VScrollComponent vsc;
-				vsc.pos.x = settings->view_w/2;
-				vsc.pos.y = settings->view_h/2 + next_y;
+		if (skip == SKIP_PREV) {
+			reset();
+			return PREV;
+		}
 
-				vsc.text = new WidgetLabel();
-				if (vsc.text) {
-					vsc.text->setPos(vsc.pos.x, vsc.pos.y);
-					vsc.text->setJustify(FontEngine::JUSTIFY_CENTER);
-					vsc.text->setText(components.front().s);
-					vsc.text->setFont("font_captions");
-					next_y += vsc.text->getBounds()->h;
-				}
+		if (vscroll_components.empty()) {
+			// populate the list of text/images from config file data
+			int next_y = 0;
+			for (size_t i = 0; i < components.size(); ++i) {
+				if (components[i].type == "text") {
+					VScrollComponent vsc;
+					vsc.pos.x = settings->view_w/2;
+					vsc.pos.y = settings->view_h/2 + next_y;
 
-				vscroll_components.push_back(vsc);
-			}
-			else if (components.front().type == "image") {
-				VScrollComponent vsc;
-
-				Image *graphics = render_device->loadImage(components.front().s, RenderDevice::ERROR_NORMAL);
-				if (graphics != NULL) {
-					vsc.image = graphics->createSprite();
-					if (vsc.image) {
-						vsc.image_size.x = vsc.image->getGraphicsWidth();
-						vsc.image_size.y = vsc.image->getGraphicsHeight();
-
-						vsc.pos.x = settings->view_w/2 - vsc.image_size.x/2;
-						vsc.pos.y = settings->view_h/2 + next_y;
-
-						next_y += vsc.image_size.y;
-
-						vscroll_components.push_back(vsc);
+					vsc.text = new WidgetLabel();
+					if (vsc.text) {
+						vsc.text->setPos(vsc.pos.x, vsc.pos.y);
+						vsc.text->setJustify(FontEngine::JUSTIFY_CENTER);
+						vsc.text->setText(components[i].s);
+						vsc.text->setFont("font_captions");
+						next_y += vsc.text->getBounds()->h;
 					}
-					graphics->unref();
+
+					vscroll_components.push_back(vsc);
+				}
+				else if (components[i].type == "image") {
+					VScrollComponent vsc;
+
+					Image *graphics = render_device->loadImage(components[i].s, RenderDevice::ERROR_NORMAL);
+					if (graphics != NULL) {
+						vsc.image = graphics->createSprite();
+						if (vsc.image) {
+							vsc.image_size.x = vsc.image->getGraphicsWidth();
+							vsc.image_size.y = vsc.image->getGraphicsHeight();
+
+							vsc.pos.x = settings->view_w/2 - vsc.image_size.x/2;
+							vsc.pos.y = settings->view_h/2 + next_y;
+
+							next_y += vsc.image_size.y;
+
+							vscroll_components.push_back(vsc);
+						}
+						graphics->unref();
+					}
+				}
+				else if (components[i].type == "separator") {
+					VScrollComponent vsc;
+					vsc.pos.y = settings->view_h/2 + next_y + components[i].x/2;
+					next_y += components[i].x;
+
+					vscroll_components.push_back(vsc);
 				}
 			}
-			else if (components.front().type == "separator") {
-				VScrollComponent vsc;
-				vsc.pos.y = settings->view_h/2 + next_y + components.front().x/2;
-				next_y += components.front().x;
-
-				vscroll_components.push_back(vsc);
-			}
-			components.pop();
 		}
 
 		vscroll_offset = static_cast<int>(static_cast<float>(vscroll_ticks) * (cutscene_settings.vscroll_speed * settings->max_frames_per_sec) / settings->view_h);
-		if (skip_scroll)
-			return false;
-		else if (skip)
-			vscroll_ticks += 8;
+		if (skip == SKIP_NEXT)
+			return NEXT;
+		else if (skip == SKIP_SUBSCENE)
+			vscroll_ticks += VSCROLL_SPEED;
 		else
 			vscroll_ticks++;
 
@@ -250,15 +356,15 @@ bool Scene::logic() {
 		if (!vscroll_components.empty()) {
 			VScrollComponent& vsc = vscroll_components.back();
 			if (vsc.text && (vsc.text->getBounds()->y + vsc.text->getBounds()->h < 0)) {
-				return false;
+				return NEXT;
 			}
 			else if ((vsc.pos.y + vsc.separator_h) - vscroll_offset < 0) {
-				return false;
+				return NEXT;
 			}
 		}
 	}
 
-	return true;
+	return NO_CHANGE;
 }
 
 void Scene::refreshWidgets() {
@@ -334,6 +440,8 @@ void Scene::refreshWidgets() {
 		}
 	}
 
+	button_prev->setBasePos(0, 0, Utils::ALIGN_TOPLEFT);
+	button_prev->setPos(button_prev->pos.w/2, button_prev->pos.h/2);
 	button_next->setBasePos(0, 0, Utils::ALIGN_TOPRIGHT);
 	button_next->setPos(-(button_next->pos.w/2), button_next->pos.h/2);
 	button_close->setBasePos(0, 0, Utils::ALIGN_TOPRIGHT);
@@ -376,12 +484,19 @@ void Scene::render() {
 		}
 	}
 
+	// only display the back button if there's more than one scene or subscene
+	bool only_scene = is_first_scene && is_last_scene;
+	if (!only_scene || (only_scene && cutscene_type == CUTSCENE_STATIC && subscenes.size() > 1))
+		button_prev->render();
+
 	button_advance->render();
 }
 
 GameStateCutscene::GameStateCutscene(GameState *game_state)
 	: previous_gamestate(game_state)
+	, scene_index(0)
 	, initialized(false)
+	, status(Scene::NO_CHANGE)
 	, game_slot(-1)
 {
 	has_background = false;
@@ -390,25 +505,24 @@ GameStateCutscene::GameStateCutscene(GameState *game_state)
 GameStateCutscene::~GameStateCutscene() {
 	if (!music.empty())
 		snd->stopMusic();
-}
 
-void GameStateCutscene::init() {
-	if (initialized)
-		return;
-
-	if (settings->music_volume > 0 && !music.empty()) {
-		// restart music so that game devs can sync with cutscene playback
-		snd->stopMusic();
-		snd->loadMusic(music);
+	for (size_t i = 0; i < scenes.size(); ++i) {
+		delete scenes[i];
 	}
-
-	initialized = true;
 }
 
 void GameStateCutscene::logic() {
-	init();
+	if (!initialized) {
+		if (settings->music_volume > 0 && !music.empty()) {
+			// restart music so that game devs can sync with cutscene playback
+			snd->stopMusic();
+			snd->loadMusic(music);
+		}
 
-	if (scenes.empty()) {
+		initialized = true;
+	}
+
+	if (scenes.empty() || scene_index >= scenes.size()) {
 		if (game_slot != -1) {
 			showLoading();
 			GameStatePlay *gsp = new GameStatePlay();
@@ -420,21 +534,34 @@ void GameStateCutscene::logic() {
 			return;
 		}
 
-		/* return to previous gamestate */
+		// return to previous gamestate
 		showLoading();
 		setRequestedGameState(previous_gamestate);
 		return;
 	}
 
-	while (!scenes.empty() && !scenes.front()->logic()) {
-		delete scenes.front();
-		scenes.pop();
-	}
+	// status is processed after we render this scene
+	if (scene_index < scenes.size())
+		status = scenes[scene_index]->logic();
 }
 
 void GameStateCutscene::render() {
-	if (!scenes.empty())
-		scenes.front()->render();
+	if (!scenes.empty() && scene_index < scenes.size()) {
+		scenes[scene_index]->render();
+
+		// process logic() status
+		if (status == Scene::DONE) {
+			scene_index = scenes.size();
+		}
+		else if (status == Scene::NEXT) {
+			scene_index++;
+		}
+		else if (status == Scene::PREV && scene_index > 0) {
+			scenes[scene_index]->reset();
+			scene_index--;
+			scenes[scene_index]->reset();
+		}
+	}
 }
 
 bool GameStateCutscene::load(const std::string& filename) {
@@ -452,13 +579,14 @@ bool GameStateCutscene::load(const std::string& filename) {
 
 		if (infile.new_section) {
 			if (infile.section == "scene") {
-				scenes.push(new Scene(cutscene_settings, Scene::CUTSCENE_STATIC));
+				scenes.push_back(new Scene(cutscene_settings, Scene::CUTSCENE_STATIC));
+				scenes.back()->subscenes.push_back(0);
 			}
 			else if (infile.section == "vscroll") {
 				// if the previous scene was also a vertical scroller, don't create a new scene
 				// instead, the previous scene will be extended
 				if (scenes.empty() || scenes.back()->cutscene_type != Scene::CUTSCENE_VSCROLL) {
-					scenes.push(new Scene(cutscene_settings, Scene::CUTSCENE_VSCROLL));
+					scenes.push_back(new Scene(cutscene_settings, Scene::CUTSCENE_VSCROLL));
 				}
 			}
 		}
@@ -509,9 +637,15 @@ bool GameStateCutscene::load(const std::string& filename) {
 				}
 			}
 			else if (infile.key == "pause") {
-				// @ATTR scene.pause|duration|Pause before next component in 'ms' or 's'.
+				// @ATTR scene.pause|duration|Pause before next component in 'ms' or 's'. A value of '-1' may be used to pause indefinitely.
 				sc.type = infile.key;
-				sc.x = Parse::toDuration(infile.val);
+				std::string temp = Parse::popFirstString(infile.val);
+				if (temp == "-1")
+					sc.x = -1;
+				else
+					sc.x = Parse::toDuration(temp);
+				// next subscene starts on the component after this pause
+				scenes.back()->subscenes.push_back(scenes.back()->components.size() + 1);
 			}
 			else if (infile.key == "soundfx") {
 				// @ATTR scene.soundfx|filename|Filename of a sound that will be played
@@ -523,7 +657,7 @@ bool GameStateCutscene::load(const std::string& filename) {
 			}
 
 			if (sc.type != "")
-				scenes.back()->components.push(sc);
+				scenes.back()->components.push_back(sc);
 
 		}
 		else if (infile.section == "vscroll") {
@@ -549,7 +683,7 @@ bool GameStateCutscene::load(const std::string& filename) {
 			}
 
 			if (sc.type != "")
-				scenes.back()->components.push(sc);
+				scenes.back()->components.push_back(sc);
 
 		}
 		else {
@@ -565,6 +699,11 @@ bool GameStateCutscene::load(const std::string& filename) {
 		return false;
 	}
 	else {
+		if (scenes.back()->components.back().type == "pause") {
+			scenes.back()->subscenes.pop_back();
+		}
+
+		scenes.front()->is_first_scene = true;
 		scenes.back()->is_last_scene = true;
 	}
 
